force-app/segments/main/default/objects/Demo_Segment__c/Demo_Segment__c.object-meta.xml
<CustomObject>
    <label>Segment</label>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>