force-app/segments/main/default/objects/Demo_Segment__c/fields/Filter_Json__c.field-meta.xml
<CustomField>
    <fullName>Filter_Json__c</fullName>
    <label>Filter (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>