force-app/segments/main/default/objects/Demo_Segment__c/fields/Last_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>Last_Refreshed__c</fullName>
    <label>Last Refreshed</label>
    <type>DateTime</type>
</CustomField>