force-app/segments/main/default/objects/Demo_Segment__c/fields/Owner_Persona__c.field-meta.xml
<CustomField>
    <fullName>Owner_Persona__c</fullName>
    <label>Owner Persona</label>
    <referenceTo>Demo_Persona__c</referenceTo>
    <relationshipLabel>Owned Segments</relationshipLabel>
    <relationshipName>Owned_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>