force-app/segments/main/default/objects/Demo_Segment__c/fields/Population_Count__c.field-meta.xml
<CustomField>
    <fullName>Population_Count__c</fullName>
    <label>Population Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>