force-app/segments/main/default/objects/Demo_Segment__c/fields/Publish_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Publish_Schedule__c</fullName>
    <label>Publish Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Real-time</fullName><default>false</default><label>Real-time</label></value>
            <value><fullName>Daily</fullName><default>true</default><label>Daily</label></value>
            <value><fullName>Weekly</fullName><default>false</default><label>Weekly</label></value>
            <value><fullName>On-demand</fullName><default>false</default><label>On-demand</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>