force-app/segments/main/default/objects/Demo_Segment__c/fields/Segment_On__c.field-meta.xml
<CustomField>
    <fullName>Segment_On__c</fullName>
    <label>Segment On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Individual</fullName><default>true</default><label>Individual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>